--- a/server/views/pages/index.ejs
+++ b/server/views/pages/index.ejs
@@ -13,12 +13,24 @@
 
 <main>
         <div class="container">
+                <% if(server_details.token){ %>
+                    <h5>Docker Swarm Join Token is : <%= server_details.token %></h5>
+                  <% } else{ %>  
+                    <form method="POST" action="/jointoken">
+                        <div class="form-group">
+                          <label >Add a docker join token</label>
+                          <input type="text" name="token" class="form-control"  placeholder="Enter docker swarm join token">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
 
+                 <% } %>
+                
                 <table class="table table-striped">
                         <thead>
                           <tr>
                             <th scope="col">Server Details</th>
-                            <th scope="col">Server Docker Details</th>
+                            <th scope="col">Docker Information</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -31,55 +43,29 @@
                                               
                                             </div>
                                           </div>
+                                          <button type="submit" onclick="location.href='/getdockernode'" class="btn btn-primary">Get Docker Nodes</button>
                             </td>
                             
                             <td>
-                                    <div class="card" style="width: 18rem;">
-                                            <div class="card-body">
-                                              <h5 class="card-title">Card title</h5>
-                                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                              <a href="#" class="card-link">Card link</a>
-                                              <a href="#" class="card-link">Another link</a>
-                                            </div>
-                                          </div>
-                            </td>
-                          </tr>
-                
-                        </tbody>
-                      </table>
 
-                <table class="table table-striped">
-                        <thead>
-                          <tr>
-                            <th scope="col">Client Details</th>
-                            <th scope="col">Docker Details</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td>
-                                    <div class="card" style="width: 18rem;">
-                                            <div class="card-body">
-                                              <h5 class="card-title">Card title</h5>
-                                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                              <a href="#" class="card-link">Card link</a>
-                                              <a href="#" class="card-link">Another link</a>
-                                            </div>
-                                          </div>
-                            </td>
-                            
-                            <td>
-                                    <div class="card" style="width: 18rem;">
-                                            <div class="card-body">
-                                              <h5 class="card-title">Card title</h5>
-                                              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                              <a href="#" class="card-link">Card link</a>
-                                              <a href="#" class="card-link">Another link</a>
-                                            </div>
-                                          </div>
+                                    <% if(server_details.docker_nodes){ %>
+                                        <div class="card" style="width: 18rem;">
+                                                <div class="card-body">
+
+                                                        <% server_details.docker_nodes.forEach(function(docker_nodes){ %>
+                                                           <h6> Node ID : <%- docker_nodes.data.ID %> </h6> 
+                                                           <h6> Role : <%- docker_nodes.data.Spec.Role %> </h6> 
+                                                           <h6> Labels: <%- JSON.stringify(docker_nodes.data.Spec.Labels) %> </h6> 
+                                                           <h6> Hostname : <%- docker_nodes.data.Description.Hostname %> </h6> 
+                                                           <h6> Addr : <%- docker_nodes.data.Status.Addr %> </h6> 
+                                                           <h6> State : <%- docker_nodes.data.Status.State %> </h6> 
+                                                           <br>
+                                                          <% }); %>                                                                        
+                                                </div>
+                                              </div>
+                                      <% } else{ %>  
+                                <% } %>
+                                   
                             </td>
                           </tr>
                 
