--- a/server/views/partials/head.ejs
+++ b/server/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/head.ejs -->
 <meta charset="UTF-8">
-<title>Super Awesome</title>
+<title>5G and IIOT Project 2018</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
